--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
         <p class="text-lg text-gray-700 mb-6">
           Saya seorang developer dan IT specialist. Berikut contoh proyek dan pengalaman kerja saya.
         </p>
-        <a href="/public/cv.pdf" class="inline-block px-6 py-3 bg-indigo-600 text-white rounded-lg shadow">
+        <a href="/public/M_Afiffudin_Yusup.pdf" class="inline-block px-6 py-3 bg-indigo-600 text-white rounded-lg shadow">
           Unduh CV
         </a>
       </div>
