update portfolio docker

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,7 +91,7 @@
               <img src="/images/DevOps.jpg" alt="Project 3" class="w-full h-56 object-cover" />
               <div class="p-4">
                 <h3 class="font-semibold text-lg">DevOps </h3>
-                <p class="text-sm text-gray-600">Deskripsi singkat proyek 3 — teknologi: Laravel / MySQL / Tailwind CSS.</p>
+                <p class="text-sm text-gray-600">Deskripsi singkat proyek 3 — teknologi: Docker Membuat Container APP | Databases</p>
               </div>
             </a>
           </div>
