--- a/views/portfolio-detail.ejs
+++ b/views/portfolio-detail.ejs
@@ -3,5 +3,13 @@
   <img src="<%= project.image %>" alt="<%= project.title %>" class="max-w-full h-auto rounded-lg mb-6 border border-gray-300 shadow-sm">
   <!-- <img src="<%= project.image %>" alt="<%= project.title %>" class="w-full h-64 object-cover rounded-lg mb-6"> -->
   <p class="text-gray-700 mb-4"><%= project.description %></p>
+  <div class="description">
+  <!-- <p><%= project.description %></p> -->
+  <% if (project.extra) { %>
+    <p><%= project.extra %></p>
+  <% } %>
+</div>
+
   <a href="/portfolio" class="text-blue-500 underline">Kembali ke Portfolio</a>
+  
 </section>
