--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,9 +44,22 @@
         <p class="text-lg text-gray-700 mb-6">
           Saya seorang developer dan IT specialist. Berikut contoh proyek dan pengalaman kerja saya.
         </p>
-        <a href="/public/M_Afiffudin_Yusup.pdf" class="inline-block px-6 py-3 bg-indigo-600 text-white rounded-lg shadow">
-          Unduh CV
-        </a>
+        <a href="M_Afiffudin_Yusup.pdf" class="inline-block px-6 py-3 bg-indigo-600 text-white rounded-lg shadow" id="downloadCV">
+  Unduh CV
+</a>
+
+<script>
+  document.getElementById('downloadCV').addEventListener('click', function(e){
+    e.preventDefault();
+    const link = document.createElement('a');
+    link.href = 'M_Afifudin Yusup_CCNA.pdf'; // path file
+    link.download = 'M_Afifudin Yusup_CCNA.pdf';
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+  });
+</script>
+
       </div>
       <!-- Sosial Media dengan Logo -->
       <div class="rounded-lg overflow-hidden shadow-lg">
