--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,7 @@
         <a href="/#portfolio" class="hover:underline">Portfolio</a>
         <a href="/#about" class="hover:underline">Tentang</a>
         <a href="/#contact" class="hover:underline">Kontak</a>
+     `  <a href="/feedback" class="hover:underline">Feedback aku</a>
         <a href="/public/M_Afiffudin_Yusup.pdf" class="px-3 py-2 bg-white text-indigo-600 rounded shadow hover:opacity-90" download>Download CV</a>
         <button id="themeToggle" aria-label="Toggle dark mode" class="p-2 rounded bg-white/20">🌓</button>
       </div>
@@ -36,5 +37,7 @@
   </footer>
 
   <script src="/js/main.js"></script>
+  <script src="/js/feedback.js"></script>
+
 </body>
 </html>
