--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -12,7 +12,6 @@
         <span>Divisi</span>
         <input type="text" name="divisi" class="w-full border rounded p-2 mt-1" required>
       </label>
-
       <label>
         <span>Dibantu untuk</span>
         <select name="service" class="w-full border rounded p-2 mt-1" required>
@@ -35,7 +34,10 @@
           <input type="radio" name="rating" value="5"> 5
         </div>
       </label>
-
+      <label>
+      <span>Keterangan</span>
+      <textarea name="keterangan" class="w-full border rounded p-2 mt-1" placeholder="Tambahkan catatan/komentar..."></textarea>
+      </label>  
       <button type="submit" class="bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition">
         Kirim Penilaian
       </button>
