update IT Support, Mobile DEV, DEVOPS

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,7 +117,7 @@
 
           <!-- Slide 1 -->
           <div class="swiper-slide max-w-xs">
-            <a href="/portfolio/1" class="block bg-white rounded-xl shadow-lg overflow-hidden border border-gray-200 hover:shadow-2xl transition">
+            <a href="/portfolio/programming_mobile" class="block bg-white rounded-xl shadow-lg overflow-hidden border border-gray-200 hover:shadow-2xl transition">
               <img src="/images/Flutter1.png" alt="Project 1" class="w-full h-56 object-cover" />
               <div class="p-4">
                 <h3 class="font-semibold text-lg">Programming Mobile</h3>
@@ -128,7 +128,7 @@
 
           <!-- Slide 2 -->
           <div class="swiper-slide max-w-xs">
-            <a href="/portfolio/2" class="block bg-white rounded-xl shadow-lg overflow-hidden border border-gray-200 hover:shadow-2xl transition">
+            <a href="/portfolio/itsupport" class="block bg-white rounded-xl shadow-lg overflow-hidden border border-gray-200 hover:shadow-2xl transition">
               <img src="/images/ITSupport.png" alt="Project 2" class="w-full h-56 object-cover" />
               <div class="p-4">
                 <h3 class="font-semibold text-lg">IT Support</h3>
@@ -139,7 +139,7 @@
 
           <!-- Slide 3 (opsional) -->
           <div class="swiper-slide max-w-xs">
-            <a href="/portfolio/3" class="block bg-white rounded-xl shadow-lg overflow-hidden border border-gray-200 hover:shadow-2xl transition">
+            <a href="/portfolio/devops" class="block bg-white rounded-xl shadow-lg overflow-hidden border border-gray-200 hover:shadow-2xl transition">
               <img src="/images/DevOps.jpg" alt="Project 3" class="w-full h-56 object-cover" />
               <div class="p-4">
                 <h3 class="font-semibold text-lg">DevOps </h3>
@@ -154,6 +154,16 @@
               <div class="p-4">
                 <h3 class="font-semibold text-lg">Jasa Teknis ( Support & Deploy To Host ) </h3>
                 <p class="text-sm text-gray-600">Deskripsi singkat Freelance — teknologi: Flask Framework Python | Databases</p>
+              </div>
+            </a>
+          </div>
+           <!-- Slide 4 (opsional) --> 
+          <div class="swiper-slide max-w-xs">
+            <a href="/portfolio/web" class="block bg-white rounded-xl shadow-lg overflow-hidden border border-gray-200 hover:shadow-2xl transition">
+              <img src="/images/Jasa_freelance.jpeg" alt="Project 3" class="w-full h-56 object-cover" />
+              <div class="p-4">
+                <h3 class="font-semibold text-lg">Programmer Web</h3>
+                <p class="text-sm text-gray-600">Deskripsi singkat — teknologi:Larave | NodeJs | Flask Framework Python | Databases Mysql, Postgressql, Sqlserver</p>
               </div>
             </a>
           </div>
