--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
         <p class="text-lg text-gray-700 mb-6">
           Saya seorang developer dan IT specialist. Berikut contoh proyek dan pengalaman kerja saya.
         </p>
-        <a href="M_Afiffudin_Yusup.pdf" class="inline-block px-6 py-3 bg-indigo-600 text-white rounded-lg shadow" id="downloadCV">
+        <a href="CV_My Portofolio Afif_IT.pdf" class="inline-block px-6 py-3 bg-indigo-600 text-white rounded-lg shadow" id="downloadCV">
   Unduh CV
 </a>
 
@@ -54,8 +54,8 @@
   document.getElementById('downloadCV').addEventListener('click', function(e){
     e.preventDefault();
     const link = document.createElement('a');
-    link.href = 'M_Afifudin Yusup_CCNA.pdf'; // path file
-    link.download = 'M_Afifudin Yusup_CCNA.pdf';
+    link.href = 'CV_My Portofolio Afif_IT.pdf'; // path file
+    link.download = 'CV_My Portofolio Afif_IT.pdf';
     document.body.appendChild(link);
     link.click();
     document.body.removeChild(link);
@@ -117,7 +117,7 @@
 
           <!-- Slide 1 -->
           <div class="swiper-slide max-w-xs">
-            <a href="/portfolio/programming_mobile" class="block bg-white rounded-xl shadow-lg overflow-hidden border border-gray-200 hover:shadow-2xl transition">
+            <a href="/portfolio/programming-mobile" class="block bg-white rounded-xl shadow-lg overflow-hidden border border-gray-200 hover:shadow-2xl transition">
               <img src="/images/Flutter1.png" alt="Project 1" class="w-full h-56 object-cover" />
               <div class="p-4">
                 <h3 class="font-semibold text-lg">Programming Mobile</h3>
