fix route and image ratio server hosting

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,7 +117,7 @@
 
           <!-- Slide 1 -->
           <div class="swiper-slide max-w-xs">
-            <a href="/programming-mobile" class="block bg-white rounded-xl shadow-lg overflow-hidden border border-gray-200 hover:shadow-2xl transition">
+            <a href="/portfolio/programming-mobile" class="block bg-white rounded-xl shadow-lg overflow-hidden border border-gray-200 hover:shadow-2xl transition">
               <img src="/images/Flutter1.png" alt="Project 1" class="w-full h-56 object-cover" />
               <div class="p-4">
                 <h3 class="font-semibold text-lg">Programming Mobile</h3>
